--- a/index.html
+++ b/index.html
@@ -8,19 +8,7 @@
     <!-- PWA Manifest and Meta Tags -->
     <meta name="theme-color" content="#111827"/>
     <link rel="apple-touch-icon" href="https://placehold.co/192x192/1f2937/ffffff?text=BDO">
-    <link rel="manifest" href="data:application/manifest+json,{
-        &quot;name&quot;: &quot;BDO Weekly Task Tracker&quot;,
-        &quot;short_name&quot;: &quot;BDO Tracker&quot;,
-        &quot;description&quot;: &quot;A checklist for your weekly tasks in Black Desert Online.&quot;,
-        &quot;start_url&quot;: &quot;.&quot;,
-        &quot;display&quot;: &quot;standalone&quot;,
-        &quot;background_color&quot;: &quot;#111827&quot;,
-        &quot;theme_color&quot;: &quot;#111827&quot;,
-        &quot;icons&quot;: [
-            { &quot;src&quot;: &quot;https://placehold.co/192x192/1f2937/ffffff?text=BDO&quot;, &quot;sizes&quot;: &quot;192x192&quot;, &quot;type&quot;: &quot;image/png&quot; },
-            { &quot;src&quot;: &quot;https://placehold.co/512x512/1f2937/ffffff?text=BDO&quot;, &quot;sizes&quot;: &quot;512x512&quot;, &quot;type&quot;: &quot;image/png&quot; }
-        ]
-    }">
+    <link rel="manifest" href='data:application/manifest+json,{"name":"BDO Weekly Task Tracker","short_name":"BDO Tracker","description":"A checklist for your weekly tasks in Black Desert Online.","start_url":".","display":"standalone","background_color":"#111827","theme_color":"#111827","icons":[{"src":"https://placehold.co/192x192/1f2937/ffffff?text=BDO","sizes":"192x192","type":"image/png"},{"src":"https://placehold.co/512x512/1f2937/ffffff?text=BDO","sizes":"512x512","type":"image/png"}]}'>
 
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
